Push fixing mistakes